# kalshi-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: architecture.md  fee_calculator.md  kalshi_api_guide.md
examples/: 01_quickstart.py  03_paper_trade.py  05_analyze_session.py
src/kalshi_kit/: __init__.py  cli.py
src/kalshi_kit/analysis/: __init__.py  diagnostics.py  lag_correlation.py
src/kalshi_kit/broker/: __init__.py  base.py  fill_model.py  live.py  paper.py  queue_logic.py  throttler.py
src/kalshi_kit/client/: __init__.py  _config.py  auth.py  rest.py  websocket.py
src/kalshi_kit/models/: __init__.py  fills.py  market.py  orderbook.py  orders.py  positions.py
src/kalshi_kit/risk/: __init__.py  kill_switch.py  limits.py  pnl.py
src/kalshi_kit/storage/: __init__.py  parquet.py  schema.sql  session.py
src/kalshi_kit/strategy/: __init__.py  base.py
src/kalshi_kit/strategy/examples/: __init__.py  random_entry.py  settlement_tracker.py
src/kalshi_kit/utils/: __init__.py  buckets.py  fees.py  ids.py  logging.py  math.py  time.py
tests/test_analysis/: test_diagnostics.py  test_lag_correlation.py
tests/test_broker/: test_fill_model.py  test_paper.py
tests/test_client/: test_auth.py
tests/test_risk/: test_limits.py
tests/test_utils/: test_fees.py
